--- a/css/templatemo-nomad-force.css
+++ b/css/templatemo-nomad-force.css
@@ -44,8 +44,9 @@ html {
 
 body {
     background: var(--white-color);
-    font-family: var(--body-font-family);    
+    font-family: var(--body-font-family);
     position: relative;
+   
 }
 
 /*---------------------------------------
@@ -108,10 +109,16 @@ p {
   font-size: var(--p-font-size);
   font-weight: var(--font-weight-light);
   letter-spacing: 0.5px;
+  font-size: 18px;
 }
 
 .text-secondary-white-color {
-  color: var(--text-secondary-white-color);
+  color: darkblue;
+}
+
+.style-footer{
+  background-color: coral; 
+  padding: 10px;
 }
 
 a, 
@@ -542,6 +549,12 @@ strong {
 .social-share-link,
 .social-share-link + span {
   color: rgba(255, 255, 255, 0.65);
+}
+
+.pad-text{
+  padding: 10px;
+  font-size: 16px;
+  color: rgb(119, 31, 31);
 }
 
 /*---------------------------------------
